# whatsacc

./: .env.example  .firebaserc  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-MIT  README.md  SECURITY.md  TASKS.md  firebase.json  index.html  package-lock.json  package.json  playwright.config.ts  todo  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts  vitest.config.ts
.firebase/: hosting.ZGlzdA.cache
.github/workflows/: ci.yml  docker.yml  release.yml
backend/: .dev.vars.example  .gitignore  deno.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
backend/migrations/: 20260505000000_baseline.sql  20260505000000_foundation.sql  20260505000000_init.sql  20260505020000_admin.sql  (+34 more)
billing-model/: generate.py
controller/: README.md  go.mod  go.sum
e2e/: README.md  e2e_test.go  go.mod  harness_test.go  jcs.go
e2e-browser/: README.md  auth-flows.spec.ts  global-setup.ts  global-teardown.ts  money-path.spec.ts
gateway/: Dockerfile  Makefile  README.md  go.mod  go.sum
proto/: README.md  commands.md  dmtap-channel.md  events.md  grants.md  pairing.md  tunnel.md
public/: robots.txt  sitemap.xml
scripts/: check-feature-claims.mjs  feature-claims.manifest.mjs  postbuild.mjs  release.sh  reset-local-db.sh  screenshotter.mjs
site/: README.md  docs.html  index.html
src/: App.tsx  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web/: README.md  landing.html
(+400 files in other folders)
